force-app/main/default/objects/sf_Application__c/fields/Application_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Display_Name__c</fullName>
    <label>Application Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>