force-app/main/default/objects/sf_Application__c/fields/sf_Ref_Application__c.field-meta.xml
<CustomField>
    <fullName>sf_Ref_Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reference Application</label>
    <referenceTo>sf_Ref_Application__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>