force-app/main/default/objects/sf_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Display_Name__c</columns>
    <columns>Status__c</columns>
    <columns>sf_Reference_Application__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>